<resources>
    <string name="app_name">TrackIt</string>
    <string name="exercise_name">Nome esercizio</string>
    <string name="add_new_exercise">Aggiungi nuovo esercizio</string>
    <string name="exercise_type">Tipo esercizio</string>
    <string name="concentric_type">Ripetizioni</string>
    <string name="isometric_type">Tempo</string>
    <string name="muscles_involved">Muscoli coinvolti</string>
    <string name="pushing_movement">Spinta</string>
    <string name="pulling_movement">Tirata</string>
    <string name="add_exercise_button">Aggiungi Esercizio</string>
    <string name="neck">Collo</string>
    <string name="shoulders">Spalle</string>
    <string name="arms">Braccia</string>
    <string name="forearms">Avambraccia</string>
    <string name="back">Dorso</string>
    <string name="chest">Petto</string>
    <string name="waist">Addome</string>
    <string name="hips">Fianchi</string>
    <string name="thighs">Cosce</string>
    <string name="calves">Polpacci</string>
    <string name="type_of_exercise">Tipo di esercizio</string>
    <string name="type_of_movement">Tipo di movimento</string>
    <string name="your_workouts">Allenamenti</string>
    <string name="your_exercises">Esercizi</string>
    <string name="fab_add">Aggiungi</string>
    <string name="fab_close">Chiudi</string>
    <string name="fab_add_new_workout">Aggiungi nuovo workout</string>
    <string name="fab_add_new_exercise">Aggiungi nuovo esercizio</string>
    <string name="workouts_page_title">Allenamenti</string>
    <string name="exercises_page_title">Esercizi</string>
    <string name="stats_page_title">Statistiche</string>
    <string name="progress_page_title">Progressi</string>
    <string name="add_new_workout">Nuovo Allenamento</string>
    <string name="add_exercise">Aggiungi Esercizio</string>
    <string name="select_exercise">Seleziona esercizio</string>
    <string name="add_set">Aggiungi set</string>
    <string name="kg">KG</string>
    <string name="reps">Ripetizioni</string>
    <string name="delete">delete</string>
    <string name="discard_workout">Annulla Allenamento</string>
    <string name="confirm_workout">Conferma Allenamento</string>
    <string name="remove_exercise">Remove exercise</string>
    <string name="rimuovi_esercizio">Rimuovi esercizio</string>
    <string name="save">Salva</string>
    <string name="remove_set">Rimuovi set</string>
    <string name="tempo_sec">Tempo(sec)</string>
    <string name="your_progress">I tuoi progressi</string>
    <string name="your_photos">Le tue foto</string>
    <string name="delete_photo">Cancella foto</string>
    <string name="your_photo">Your photo</string>
    <string name="sample_date">00/00/00</string>
    <string name="workout_helper">Premi il tasto + per aggiungere un nuovo workout o creare un nuovo esercizio!</string>
    <string name="exercise_helper">Premi il tasto + nella pagina degli allenamenti per aggiungere un nuovo esercizio!</string>
    <string name="progress_helper">Aggiungi un esercizio ai preferiti per iniziare a tracciarne i progressi!</string>
    <string name="photos_helper">Scatta una foto per iniziare a monitorare i tuoi miglioramenti nel tempo!</string>
    <string name="take_a_photo">Scatta una foto</string>
    <string-array
        name="muscle_groups">
        <item>@string/neck</item>
        <item>@string/shoulders</item>
        <item>@string/arms</item>
        <item>@string/forearms</item>
        <item>@string/back</item>
        <item>@string/chest</item>
        <item>@string/waist</item>
        <item>@string/hips</item>
        <item>@string/thighs</item>
        <item>@string/calves</item>
    </string-array>
</resources>