<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_add"
        app:srcCompat="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/home_recycler_view"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_add_new_exercise"
        app:layout_constraintBottom_toTopOf="@+id/fab_add"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:fabSize = "mini"
        app:srcCompat="@drawable/ic_arm" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_workout"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_add_new_workout"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab_add_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabSize = "mini"
        app:srcCompat="@drawable/ic_create" />

</merge>